// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RoomHeader > Tchap custo > should render as expected 1`] = `
<div>
  <header
    class="_flex_4dswl_9 mx_RoomHeader light-panel"
    style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: start; --mx-flex-gap: var(--cpd-space-3x); --mx-flex-wrap: nowrap;"
  >
    <button
      aria-label="Open room settings"
      aria-live="off"
      class="_avatar_va14e_8 mx_BaseAvatar _avatar-imageless_va14e_55"
      data-color="3"
      data-testid="avatar-img"
      data-type="round"
      role="button"
      style="--cpd-avatar-size: 40px;"
      tabindex="-1"
    >
      !
    </button>
    <button
      aria-label="Room info"
      class="mx_RoomHeader_infoWrapper"
      tabindex="0"
      type="button"
    >
      <div
        class="mx_RoomHeader_info _box-flex_1odfs_9"
        style="--mx-box-flex: 1;"
      >
        <div
          aria-level="1"
          class="_typography_6v6n8_153 _font-body-lg-semibold_6v6n8_74 mx_RoomHeader_heading"
          dir="auto"
          role="heading"
        >
          <span
            class="mx_RoomHeader_truncated mx_lineClamp"
          >
            !1:example.org
          </span>
        </div>
      </div>
    </button>
    <button
      aria-disabled="false"
      aria-label="Video call"
      class="_icon-button_1215g_8"
      data-kind="primary"
      role="button"
      style="--cpd-icon-button-size: 32px;"
      tabindex="0"
    >
      <div
        class="_indicator-icon_147l5_17"
        style="--cpd-icon-button-size: 100%;"
      >
        <svg
          aria-labelledby="react-use-id-1"
          fill="currentColor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6 4h10a2 2 0 0 1 2 2v4.286l3.35-2.871a1 1 0 0 1 1.65.76v7.65a1 1 0 0 1-1.65.76L18 13.715V18a2 2 0 0 1-2 2H6a4 4 0 0 1-4-4V8a4 4 0 0 1 4-4"
          />
        </svg>
      </div>
    </button>
    <button
      aria-label="Threads"
      aria-labelledby="react-use-id-2"
      class="_icon-button_1215g_8"
      data-kind="primary"
      role="button"
      style="--cpd-icon-button-size: 32px;"
      tabindex="0"
    >
      <div
        class="_indicator-icon_147l5_17"
        style="--cpd-icon-button-size: 100%;"
      >
        <svg
          fill="currentColor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4 3h16a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H6l-2.293 2.293c-.63.63-1.707.184-1.707-.707V5a2 2 0 0 1 2-2m3 7h10q.424 0 .712-.287A.97.97 0 0 0 18 9a.97.97 0 0 0-.288-.713A.97.97 0 0 0 17 8H7a.97.97 0 0 0-.713.287A.97.97 0 0 0 6 9q0 .424.287.713Q6.576 10 7 10m0 4h6q.424 0 .713-.287A.97.97 0 0 0 14 13a.97.97 0 0 0-.287-.713A.97.97 0 0 0 13 12H7a.97.97 0 0 0-.713.287A.97.97 0 0 0 6 13q0 .424.287.713Q6.576 14 7 14"
          />
        </svg>
      </div>
    </button>
    <button
      aria-label="Notifications"
      aria-labelledby="react-use-id-3"
      class="_icon-button_1215g_8"
      data-kind="primary"
      role="button"
      style="--cpd-icon-button-size: 32px;"
      tabindex="0"
    >
      <div
        class="_indicator-icon_147l5_17"
        style="--cpd-icon-button-size: 100%;"
      >
        <svg
          class=""
          fill="currentColor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20.293 17.293c.63.63.184 1.707-.707 1.707H4.414c-.89 0-1.337-1.077-.707-1.707L5 16v-6s0-7 7-7 7 7 7 7v6zM12 22a2 2 0 0 1-2-2h4a2 2 0 0 1-2 2"
          />
        </svg>
      </div>
    </button>
    <button
      aria-label="Room info"
      aria-labelledby="react-use-id-4"
      class="_icon-button_1215g_8"
      data-kind="primary"
      role="button"
      style="--cpd-icon-button-size: 32px;"
      tabindex="0"
    >
      <div
        class="_indicator-icon_147l5_17"
        style="--cpd-icon-button-size: 100%;"
      >
        <svg
          class=""
          fill="currentColor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 17q.424 0 .713-.288A.97.97 0 0 0 13 16v-4a.97.97 0 0 0-.287-.713A.97.97 0 0 0 12 11a.97.97 0 0 0-.713.287A.97.97 0 0 0 11 12v4q0 .424.287.712.288.288.713.288m0-8q.424 0 .713-.287A.97.97 0 0 0 13 8a.97.97 0 0 0-.287-.713A.97.97 0 0 0 12 7a.97.97 0 0 0-.713.287A.97.97 0 0 0 11 8q0 .424.287.713Q11.576 9 12 9m0 13a9.7 9.7 0 0 1-3.9-.788 10.1 10.1 0 0 1-3.175-2.137q-1.35-1.35-2.137-3.175A9.7 9.7 0 0 1 2 12q0-2.075.788-3.9a10.1 10.1 0 0 1 2.137-3.175q1.35-1.35 3.175-2.137A9.7 9.7 0 0 1 12 2q2.075 0 3.9.788a10.1 10.1 0 0 1 3.175 2.137q1.35 1.35 2.137 3.175A9.7 9.7 0 0 1 22 12a9.7 9.7 0 0 1-.788 3.9 10.1 10.1 0 0 1-2.137 3.175q-1.35 1.35-3.175 2.137A9.7 9.7 0 0 1 12 22"
          />
        </svg>
      </div>
    </button>
    <div
      class="_typography_6v6n8_153 _font-body-sm-medium_6v6n8_41"
    >
      <div
        aria-label="0 members"
        aria-labelledby="react-use-id-5"
        class="mx_AccessibleButton mx_FacePile"
        role="button"
        tabindex="0"
      >
        <div
          class="_stacked-avatars_va14e_109"
        />
        0
      </div>
    </div>
  </header>
</div>
`;

exports[`RoomHeader > dm > does not show the face pile for DMs 1`] = `
<DocumentFragment>
  <header
    class="_flex_4dswl_9 mx_RoomHeader light-panel"
    style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: start; --mx-flex-gap: var(--cpd-space-3x); --mx-flex-wrap: nowrap;"
  >
    <button
      aria-label="Open room settings"
      aria-live="off"
      class="_avatar_va14e_8 mx_BaseAvatar _avatar-imageless_va14e_55"
      data-color="3"
      data-testid="avatar-img"
      data-type="round"
      role="button"
      style="--cpd-avatar-size: 40px;"
      tabindex="-1"
    >
      !
    </button>
    <button
      aria-label="Room info"
      class="mx_RoomHeader_infoWrapper"
      tabindex="0"
      type="button"
    >
      <div
        class="mx_RoomHeader_info _box-flex_1odfs_9"
        style="--mx-box-flex: 1;"
      >
        <div
          aria-level="1"
          class="_typography_6v6n8_153 _font-body-lg-semibold_6v6n8_74 mx_RoomHeader_heading"
          dir="auto"
          role="heading"
        >
          <span
            class="mx_RoomHeader_truncated mx_lineClamp"
          >
            !1:example.org
          </span>
        </div>
        <div
          class="tc_badge"
        >
          <span
            class="_typography_6v6n8_153 _font-body-sm-medium_6v6n8_41 _badge_10dml_8 badge-content"
            data-kind="green"
          >
            <svg
              fill="currentColor"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 22q-.824 0-1.412-.587A1.93 1.93 0 0 1 4 20V10q0-.825.588-1.412A1.93 1.93 0 0 1 6 8h1V6q0-2.075 1.463-3.537Q9.926 1 12 1q2.075 0 3.537 1.463Q17 3.925 17 6v2h1q.824 0 1.413.588Q20 9.175 20 10v10q0 .824-.587 1.413A1.93 1.93 0 0 1 18 22zM9 8h6V6q0-1.25-.875-2.125A2.9 2.9 0 0 0 12 3q-1.25 0-2.125.875A2.9 2.9 0 0 0 9 6z"
              />
            </svg>
            <span
              class="description"
            >
              Encrypted
            </span>
          </span>
        </div>
      </div>
    </button>
    <button
      aria-disabled="false"
      aria-label="Video call"
      class="_icon-button_1215g_8"
      data-kind="primary"
      role="button"
      style="--cpd-icon-button-size: 32px;"
      tabindex="0"
    >
      <div
        class="_indicator-icon_147l5_17"
        style="--cpd-icon-button-size: 100%;"
      >
        <svg
          aria-labelledby="react-use-id-1"
          fill="currentColor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6 4h10a2 2 0 0 1 2 2v4.286l3.35-2.871a1 1 0 0 1 1.65.76v7.65a1 1 0 0 1-1.65.76L18 13.715V18a2 2 0 0 1-2 2H6a4 4 0 0 1-4-4V8a4 4 0 0 1 4-4"
          />
        </svg>
      </div>
    </button>
    <button
      aria-disabled="false"
      aria-label="Voice call"
      class="_icon-button_1215g_8"
      data-kind="primary"
      role="button"
      style="--cpd-icon-button-size: 32px;"
      tabindex="0"
    >
      <div
        class="_indicator-icon_147l5_17"
        style="--cpd-icon-button-size: 100%;"
      >
        <svg
          aria-labelledby="react-use-id-2"
          fill="currentColor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m20.958 16.374.039 3.527q0 .427-.33.756-.33.33-.756.33a16 16 0 0 1-6.57-1.105 16.2 16.2 0 0 1-5.563-3.663 16.1 16.1 0 0 1-3.653-5.573 16.3 16.3 0 0 1-1.115-6.56q0-.427.33-.757T4.095 3l3.528.039a1.07 1.07 0 0 1 1.085.93l.543 3.954q.039.271-.039.504a1.1 1.1 0 0 1-.271.426l-1.64 1.64q.505 1.008 1.154 1.909c.433.6 1.444 1.696 1.444 1.696s1.095 1.01 1.696 1.444q.9.65 1.909 1.153l1.64-1.64q.193-.193.426-.27t.504-.04l3.954.543q.406.059.668.359t.262.727"
          />
        </svg>
      </div>
    </button>
    <button
      aria-label="Threads"
      aria-labelledby="react-use-id-3"
      class="_icon-button_1215g_8"
      data-kind="primary"
      role="button"
      style="--cpd-icon-button-size: 32px;"
      tabindex="0"
    >
      <div
        class="_indicator-icon_147l5_17"
        style="--cpd-icon-button-size: 100%;"
      >
        <svg
          fill="currentColor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4 3h16a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H6l-2.293 2.293c-.63.63-1.707.184-1.707-.707V5a2 2 0 0 1 2-2m3 7h10q.424 0 .712-.287A.97.97 0 0 0 18 9a.97.97 0 0 0-.288-.713A.97.97 0 0 0 17 8H7a.97.97 0 0 0-.713.287A.97.97 0 0 0 6 9q0 .424.287.713Q6.576 10 7 10m0 4h6q.424 0 .713-.287A.97.97 0 0 0 14 13a.97.97 0 0 0-.287-.713A.97.97 0 0 0 13 12H7a.97.97 0 0 0-.713.287A.97.97 0 0 0 6 13q0 .424.287.713Q6.576 14 7 14"
          />
        </svg>
      </div>
    </button>
    <button
      aria-label="Room info"
      aria-labelledby="react-use-id-4"
      class="_icon-button_1215g_8"
      data-kind="primary"
      role="button"
      style="--cpd-icon-button-size: 32px;"
      tabindex="0"
    >
      <div
        class="_indicator-icon_147l5_17"
        style="--cpd-icon-button-size: 100%;"
      >
        <svg
          class=""
          fill="currentColor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 17q.424 0 .713-.288A.97.97 0 0 0 13 16v-4a.97.97 0 0 0-.287-.713A.97.97 0 0 0 12 11a.97.97 0 0 0-.713.287A.97.97 0 0 0 11 12v4q0 .424.287.712.288.288.713.288m0-8q.424 0 .713-.287A.97.97 0 0 0 13 8a.97.97 0 0 0-.287-.713A.97.97 0 0 0 12 7a.97.97 0 0 0-.713.287A.97.97 0 0 0 11 8q0 .424.287.713Q11.576 9 12 9m0 13a9.7 9.7 0 0 1-3.9-.788 10.1 10.1 0 0 1-3.175-2.137q-1.35-1.35-2.137-3.175A9.7 9.7 0 0 1 2 12q0-2.075.788-3.9a10.1 10.1 0 0 1 2.137-3.175q1.35-1.35 3.175-2.137A9.7 9.7 0 0 1 12 2q2.075 0 3.9.788a10.1 10.1 0 0 1 3.175 2.137q1.35 1.35 2.137 3.175A9.7 9.7 0 0 1 22 12a9.7 9.7 0 0 1-.788 3.9 10.1 10.1 0 0 1-2.137 3.175q-1.35 1.35-3.175 2.137A9.7 9.7 0 0 1 12 22"
          />
        </svg>
      </div>
    </button>
  </header>
</DocumentFragment>
`;
